--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline"> Tu blog de confianza </span>
+                <span id="tagline"> Tu blog Maestro </span>
             </div>
             <div id="post">
                 <h1> Este es el titulo atractivo e interesante del post </h1>
@@ -16,6 +16,9 @@
                 Los Blogs son la mejor forma de compartir informacion y tus ideas. 
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                 Pero estadisticamente no lo eres... por ahora.
+                </p>
+                <p>
+                Suscribete y sale like
                 </p>
         
             </div>                
