--- a/blogpost.html
+++ b/blogpost.html
@@ -18,10 +18,10 @@
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                 Pero estadisticamente no lo eres... por ahora.
                 </p>
-                <p>
-                Suscribete y sale like
-                </p>
-        
+                <p>Suscribete y sale like</p>
+            </div>
+            <div id="footer">
+                Hecho con amor en Platzi por Shanti &lt;3
             </div>                
         </div>
 
