--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1> Este es el titulo atractivo e interesante del post </h1>
-                <p>Y este es el parrafo del inicio donde vamos a explicar las cosas increibles </p>
+                <p>Y este es el párrafo del inicio donde vamos a explicar las cosas increíbles </p>
                 <p>
                 Los Blogs son la mejor forma de compartir informacion y tus ideas. 
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
