--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                 Pero estadisticamente no lo eres... por ahora.
                 </p>
+                <p><img src="imagenes/emoji.jpg" width="100%" /></p>
                 <p>Suscribete y sale like</p>
             </div>
             <div id="footer">
